Updated/removed deprecated code