@@ -34,10 +34,6 @@ import de.schlund.pfixcore.oxm.impl.SerializationContext;
 import de.schlund.pfixcore.oxm.impl.SimpleTypeSerializer;
 import de.schlund.pfixcore.oxm.impl.XMLWriter;
 
-/**
- * @author mleidig@schlund.de
- * @author Stephan Schmidt <schst@stubbles.net>
- */
 public class BeanSerializer implements ComplexTypeSerializer {
 
     BeanDescriptorFactory beanDescFactory;
@@ -134,7 +130,7 @@ public class BeanSerializer implements ComplexTypeSerializer {
                             de.schlund.pfixcore.oxm.impl.annotation.SimpleTypeSerializerClass serAnno = anno.annotationType().getAnnotation(
                                     de.schlund.pfixcore.oxm.impl.annotation.SimpleTypeSerializerClass.class);
                             Class<? extends SimpleTypeSerializer> serClass = serAnno.value();
-                            SimpleTypeSerializer serializer = serClass.newInstance();
+                            SimpleTypeSerializer serializer = serClass.getDeclaredConstructor().newInstance();
                             if (AnnotationAware.class.isAssignableFrom(serClass)) {
                                 AnnotationAware aa = (AnnotationAware) serializer;
                                 aa.setAnnotation(anno);
@@ -145,7 +141,7 @@ public class BeanSerializer implements ComplexTypeSerializer {
                             de.schlund.pfixcore.oxm.impl.annotation.ComplexTypeSerializerClass serAnno = anno.annotationType().getAnnotation(
                                     de.schlund.pfixcore.oxm.impl.annotation.ComplexTypeSerializerClass.class);
                             Class<? extends ComplexTypeSerializer> serClass = serAnno.value();
-                            ComplexTypeSerializer serializer = serClass.newInstance();
+                            ComplexTypeSerializer serializer = serClass.getDeclaredConstructor().newInstance();
                             if (AnnotationAware.class.isAssignableFrom(serClass)) {
                                 AnnotationAware aa = (AnnotationAware) serializer;
                                 aa.setAnnotation(anno);
@@ -162,7 +158,7 @@ public class BeanSerializer implements ComplexTypeSerializer {
                             de.schlund.pfixcore.oxm.impl.annotation.SimpleTypeSerializerClass serAnno = anno.annotationType().getAnnotation(
                                     de.schlund.pfixcore.oxm.impl.annotation.SimpleTypeSerializerClass.class);
                             Class<? extends SimpleTypeSerializer> serClass = serAnno.value();
-                            SimpleTypeSerializer serializer = serClass.newInstance();
+                            SimpleTypeSerializer serializer = serClass.getDeclaredConstructor().newInstance();
                             if (AnnotationAware.class.isAssignableFrom(serClass)) {
                                 AnnotationAware aa = (AnnotationAware) serializer;
                                 aa.setAnnotation(anno);
@@ -173,7 +169,7 @@ public class BeanSerializer implements ComplexTypeSerializer {
                             de.schlund.pfixcore.oxm.impl.annotation.ComplexTypeSerializerClass serAnno = anno.annotationType().getAnnotation(
                                     de.schlund.pfixcore.oxm.impl.annotation.ComplexTypeSerializerClass.class);
                             Class<? extends ComplexTypeSerializer> serClass = serAnno.value();
-                            ComplexTypeSerializer serializer = serClass.newInstance();
+                            ComplexTypeSerializer serializer = serClass.getDeclaredConstructor().newInstance();
                             if (AnnotationAware.class.isAssignableFrom(serClass)) {
                                 AnnotationAware aa = (AnnotationAware) serializer;
                                 aa.setAnnotation(anno);
