@@ -15,7 +15,6 @@
  * along with Pustefix; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
-
 package de.schlund.pfixcore.workflow.app;
 
 import java.util.Arrays;
@@ -52,13 +51,9 @@ import de.schlund.pfixxml.resources.ResourceUtil;
 
 /**
  * Default implementation of the <code>IWrapperContainer</code> interface.
- * <br/>
- * 
- * @author <a href="mailto:jtl@schlund.de">Jens Lautenbacher</a>
- * 
  */
-
 public class IWrapperContainerImpl implements IWrapperContainer {
+
     protected Logger                  LOG              = LoggerFactory.getLogger(this.getClass());
     private TreeMap<String, IWrapper> wrappers         = new TreeMap<String, IWrapper>();
     private Set<IWrapper>             allwrappers      = new TreeSet<IWrapper>();
@@ -308,7 +303,7 @@ public class IWrapperContainerImpl implements IWrapperContainer {
                 IWrapper wrapper = null;
                 try {
                     thewrapper = Class.forName(iface);
-                    wrapper = (IWrapper) thewrapper.newInstance();
+                    wrapper = (IWrapper) thewrapper.getDeclaredConstructor().newInstance();
                 } catch (ClassNotFoundException e) {
                     throw new XMLException("unable to find class [" + iface + "] :" + e.getMessage());
                 } catch (InstantiationException e) {
@@ -441,4 +436,4 @@ public class IWrapperContainerImpl implements IWrapperContainer {
         return context;
     }
 
-}// IWrapperSimpleContainer
+}
