@@ -15,8 +15,9 @@
  * along with Pustefix; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
-
 package org.pustefixframework.config.contextxmlservice.parser;
+
+import java.lang.reflect.InvocationTargetException;
 
 import org.pustefixframework.config.contextxmlservice.parser.internal.ContextXMLServletConfigImpl;
 import org.pustefixframework.config.generic.ParsingUtils;
@@ -28,11 +29,6 @@ import com.marsching.flexiparse.parser.exception.ParserException;
 
 import de.schlund.pfixcore.auth.RoleProvider;
 
-/**
- * 
- * @author mleidig
- *
- */
 public class RoleProviderParsingHandler implements ParsingHandler {
 
     public void handleNode(HandlerContext context) throws ParserException {
@@ -49,17 +45,14 @@ public class RoleProviderParsingHandler implements ParsingHandler {
             Class<?> clazz = Class.forName(className);
             if (!RoleProvider.class.isAssignableFrom(clazz))
                 throw new ParserException("Class '" + className + "' doesn't implement the RoleProvider interface.");
-            roleProvider = (RoleProvider) clazz.newInstance();
+            roleProvider = (RoleProvider) clazz.getDeclaredConstructor().newInstance();
             config.getContextConfig().setCustomRoleProvider(roleProvider);
             context.getObjectTreeElement().addObject(roleProvider);
         } catch (ClassNotFoundException x) {
             throw new ParserException("RoleProvider class not found: " + className);
-        } catch (InstantiationException x) {
-            throw new ParserException("RoleProvider class can't be instantiated: " + className, x);
-        } catch (IllegalAccessException x) {
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException x) {
             throw new ParserException("RoleProvider class can't be instantiated: " + className, x);
         }
-        
         PropertyParsingUtils.setProperties(roleProvider, element);
     }
 
