@@ -15,7 +15,6 @@
  * along with Pustefix; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
-
 package org.pustefixframework.webservices.jsonws.deserializers;
 
 import java.lang.reflect.Array;
@@ -50,7 +49,7 @@ public class ArrayDeserializer extends Deserializer {
         return false;
     }
 
-    @SuppressWarnings("unchecked")
+    @SuppressWarnings({"unchecked", "rawtypes"})
     @Override
     public Object deserialize(DeserializationContext ctx, Object jsonValue, Type targetType) throws DeserializationException {
 
@@ -96,7 +95,7 @@ public class ArrayDeserializer extends Deserializer {
                 List list = null;
                 if (!targetClass.isInterface()) {
                     try {
-                        list = (List) targetClass.newInstance();
+                        list = (List) targetClass.getDeclaredConstructor().newInstance();
                     } catch (Exception x) {}
                 }
                 if (list == null) {
